# raindex-orders

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  DEPLOY.md  LOCK_INFRASTRUCTURE_PLAN.md  README.md  compose-rainlang.mjs  deploy-sepolia.sh  flake.nix  foundry.toml  package-lock.json  package.json
.github/workflows/: test.yml
bridge-orchestrator/: Cargo.toml  README.md
bridge-orchestrator/src/: config.rs  coupon_flow.rs  ham.rs  lock_flow.rs  main.rs  orchestrator.rs  retention.rs  signer.rs  state.rs  watchtower_reporter.rs
coupon-signer/: .env.example  Cargo.toml  README.md
coupon-signer/src/: ham.rs  main.rs  signer.rs  withdrawer.rs
lock-watcher-rs/: .env.example  .gitignore  Cargo.toml
lock-watcher-rs/src/: config.rs  database.rs  ham.rs  holochain_bridge.rs  main.rs  types.rs  watcher.rs
script/: DeployClaimOrderViaVault.s.sol  DeployHoloLockVault.s.sol  DeployTestHOT.s.sol
src/: Constants.sol  HoloLockVault.sol  holo-claim.rain
src/test/: MockHOT.sol  MockOrderBook.sol
test/: TestClaim.t.sol  TestHoloLockVault.t.sol
test/lib/: LibComposeOrder.sol  SignContext.sol
ui/: .env.example  .prettierrc  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts  wagmi.config.ts  wrangler.jsonc
ui/scripts/: cf-deploy.sh
ui/src/: generated.ts
ui/src/lib/: coupon.ts  ethereum.ts  getCoupon.ts  lockVaultAbi.ts  orderConfig.ts  stores.ts  types.ts  utils.ts  web3modal.ts
ui/src/lib/components/: CommonFooter.svelte  ConnectWalletModal.svelte  CopyableUrl.svelte  HotFaucetLink.svelte  SepoliaFaucetLink.svelte  TransactionModal.svelte
ui/src/lib/queries/: getOrders.ts
ui/src/lib/stores/: transactionStore.ts
ui/src/routes/: +layout.svelte  +page.svelte
ui/src/routes/admin/: +page.svelte
ui/src/routes/api/faucet/: +server.ts
ui/src/routes/api/generate-coupon/: +server.ts
ui/src/routes/claim/: +page.svelte
ui/src/routes/faucet/: +page.svelte
ui/src/routes/generate/: +page.svelte
ui/src/routes/lock/: +page.svelte
