[package]
name = "bridge-orchestrator"
version = "0.1.0"
edition = "2021"
description = "Single-writer bridge orchestrator for lock-watcher and coupon-signer flows"

[dependencies]
alloy = { version = "0.8", features = ["full", "signer-local"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
ham = { git = "https://github.com/unytco/ham.git", branch = "main" }
hex = "0.4"
hmac = "0.12"
holo_hash = { version = "0.6.1-rc.5", features = ["encoding"] }
holochain_client = "0.8.1-rc.7"
holochain_zome_types = "0.6.1-rc.5"
rave_engine = "0.3.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rmp-serde = "1.1"
rusqlite = { version = "0.37", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
zfuel = "0.6.2"
