[package]
name = "coupon-signer"
version = "0.1.0"
edition = "2021"
description = "CLI tool for signing HoloFuel claim coupons"

[dependencies]
alloy = { version = "0.8", features = ["full", "signer-local"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
anyhow = "1"
dotenvy = "0.15"
rmp-serde = "1.1"

# Holochain (withdrawer command)
holochain_client = "0.8.1-rc.0"
holochain_zome_types = "0.6.1-rc.0"
holo_hash = { version = "0.6.1-rc.0", features = ["encoding"] }
rave_engine = "0.3.0"