[package]
name = "lock-watcher"
version = "0.1.0"
edition = "2021"
description = "Ethereum event watcher for HOT Lock events - bridges to Holochain"
license = "CAL-1.0"

[dependencies]
# Ethereum interaction
alloy = { version = "0.8", features = ["full", "signer-local"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.37", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1.1"

# Utilities
hex = "0.4"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"

# Holochain bridge (transactor create_parked_link)
holochain_client = "0.8.1-rc.0"
holochain_zome_types = "0.6.1-rc.0"
holo_hash = { version = "0.6.1-rc.0", features = ["encoding"] }
rave_engine = "0.3.1"

[dev-dependencies]
tokio-test = "0.4"
